--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,16 +10,16 @@ permissions:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest   
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'
+          channel: stable
 
       - name: Install dependencies
         run: flutter pub get
@@ -27,14 +27,7 @@ jobs:
       - name: Build APK
         run: flutter build apk --release
 
-      - name: Build Windows
-        run: |
-          flutter config --enable-windows-desktop
-          flutter build windows --release
-
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: |
-            build/app/outputs/flutter-apk/app-release.apk
-            build/windows/x64/runner/Release/myapp.exe
+          files: build/app/outputs/flutter-apk/app-release.apk
