--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,33 +1,30 @@
-name: Build and Release
-
+name: Publicacion Automatica
 on:
   push:
     tags:
       - 'v*'
-
-permissions:
-  contents: write
-
 jobs:
   build:
-    runs-on: ubuntu-latest   
-
+    name: Compilando para Android y Windows
+    runs-on: windows-latest
+    permissions:
+      contents: write
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
+      - uses: actions/checkout@v3
+      - uses: subosito/flutter-action@v2
         with:
-          channel: stable
-
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Build APK
+          channel: 'stable'
+      - name: Build Android
         run: flutter build apk --release
-
-      - name: Release
+      - name: Build Windows
+        run: |
+          flutter config --enable-windows-desktop
+          flutter build windows --release
+      - name: Crear Release y Subir Archivos
         uses: softprops/action-gh-release@v1
         with:
-          files: build/app/outputs/flutter-apk/app-release.apk
+          files: |
+            build/app/outputs/flutter-apk/app-release.apk
+            build/windows/x64/runner/Release/myapp.exe
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
