--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,30 +1,37 @@
 name: Publicacion Automatica
+
 on:
   push:
     tags:
       - 'v*'
+
 jobs:
   build:
     name: Compilando para Android y Windows
     runs-on: windows-latest
     permissions:
       contents: write
+
     steps:
       - uses: actions/checkout@v3
+
       - uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'
+          channel: stable
+
       - name: Build Android
         run: flutter build apk --release
+
       - name: Build Windows
         run: |
           flutter config --enable-windows-desktop
           flutter build windows --release
+
       - name: Crear Release y Subir Archivos
         uses: softprops/action-gh-release@v1
         with:
           files: |
             build/app/outputs/flutter-apk/app-release.apk
-            build/windows/x64/runner/Release/myapp.exe
+            build/windows/x64/runner/Release/**
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
